--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -1,14 +1,15 @@
 .profile__info {
-	display: flex;
-	flex-direction: column;
-	margin-right: auto;
+    margin-right: auto;
+    display: grid;
+    grid-template-areas: 'name edit' 'ocupation ocupation';
+    align-content: center;
 }
 
 @media screen and (max-width: 900px) {
-	.profile__info {
-		align-items: center;
-		margin-right: 0;
-		margin-top: 30px;
-		margin-bottom: 36px;
-	}
+    .profile__info {
+        align-items: center;
+        margin-right: 0;
+        margin-top: 30px;
+        margin-bottom: 36px;
+    }
 }
